<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/goto_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/goto_txt1"
        android:textColor="@color/blanco"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goto_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goto_img1"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/goto_txt2"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goto_txt1" />

    <ImageView
        android:id="@+id/goto_img1"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_below="@id/goto_txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/hugmoji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goto_txt2" />

    <Button
        android:id="@+id/goto_previous"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_previous_style"
        android:elevation="5dp"
        android:text="@string/retroceder"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goto_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_next_style"
        android:elevation="5dp"
        android:text="@string/registrarme"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>