<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/goto_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_txt1"
        android:textColor="@color/blanco"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/goto_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_txt2"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/goto_img1"/>

    <ImageView
        android:id="@+id/goto_img1"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/hugmoji"
        android:layout_below="@id/goto_txt1"/>

    <Button
        android:id="@+id/goto_previous"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/retroceder"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        android:background="@drawable/btn_previous_style"
        android:elevation="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@id/separacion"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:id="@+id/separacion"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/negro" />

    <Button
        android:id="@+id/goto_next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarme"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        android:background="@drawable/btn_next_style"
        android:elevation="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@id/separacion"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="40dp"/>

</RelativeLayout>