<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/opc_usuario">

    <TextView
        android:id="@+id/deletequestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/negro"/>

    <ImageView
        android:id="@+id/imgdel"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/errormoji"
        android:contentDescription="@string/app_name"
        android:layout_below="@id/deletequestion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/alldeletedbyemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuentas_asociadas"
        android:layout_below="@id/imgdel"
        android:textColor="@color/rojo"
        android:textSize="20sp"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_del_element3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alldeletedbyemail">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_del_keyword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/palabra_secreta"
            android:textColorHint="@color/azulCielo"
            android:textSize="20sp"
            android:textColor="@color/blanco"
            android:layout_gravity="center"
            android:singleLine="true"
            android:inputType="textVisiblePassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/email_del_btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_user_style"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_below="@id/email_del_element3"/>
</RelativeLayout>