<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/funciona_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/funciona_txt1"
        android:textColor="@color/blanco"
        android:textSize="37sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/funciona_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/funciona_title"
        android:layout_marginTop="40dp"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/funciona_txt2"
        android:textColor="@color/blanco"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funciona_title" />

    <ImageView
        android:id="@+id/funciona_img1"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_below="@id/funciona_txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/edsa_tutorial_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funciona_txt2" />

    <TextView
        android:id="@+id/funciona_txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/funciona_img1"
        android:layout_marginTop="40dp"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/funciona_txt3"
        android:textColor="@color/blanco"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funciona_img1" />

    <ImageView
        android:id="@+id/funciona_img2"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@id/funciona_txt3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/edsa_tutorial_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funciona_txt3" />

    <Button
        android:id="@+id/funciona_previous"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/btn_previous_style"
        android:elevation="5dp"
        android:text="@string/retroceder"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funciona_img2" />

    <Button
        android:id="@+id/funciona_next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/btn_next_style"
        android:elevation="5dp"
        android:text="@string/avanzar"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funciona_img2" />

</androidx.constraintlayout.widget.ConstraintLayout>