<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/notify_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/notify_txt1"
        android:textColor="@color/blanco"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notify_img1"
        android:layout_width="290dp"
        android:layout_height="130dp"
        android:layout_below="@id/notify_txt1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/edsa_search_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notify_txt1" />

    <TextView
        android:id="@+id/notify_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notify_img1"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/notify_txt2"
        android:textColor="@color/blanco"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notify_img1" />

    <ImageView
        android:id="@+id/notify_img2"
        android:layout_width="290dp"
        android:layout_height="130dp"
        android:layout_below="@id/notify_txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/edsa_search_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notify_txt2" />

    <Button
        android:id="@+id/notify_previous"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_previous_style"
        android:elevation="5dp"
        android:text="@string/retroceder"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/notify_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_next_style"
        android:elevation="5dp"
        android:text="@string/avanzar"
        android:textAllCaps="false"
        android:textColor="@color/txt_pressed_user_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>